update images break points

--- a/0x03-responsive_design/03-index.html
+++ b/0x03-responsive_design/03-index.html
@@ -185,9 +185,9 @@
                                         <div class="row">
                                             <div class="col-1-2">
                                                 <img sizes="(max-width: 3000px) 40vw, 1200px" srcset="
-images/pic-about-01_mvr518_c_scale,w_380.jpg 380w,
-images/pic-about-01_mvr518_c_scale,w_859.jpg 859w,
-images/pic-about-01_mvr518_c_scale,w_1200.jpg 1200w" src="images/pic-about-01_mvr518_c_scale,w_1200.jpg" alt="">
+images/pic-about-01_cpu2zo_c_scale,w_380.jpg 380w,
+images/pic-about-01_cpu2zo_c_scale,w_859.jpg 859w,
+images/pic-about-01_cpu2zo_c_scale,w_1200.jpg 1200w" src="images/pic-about-01_cpu2zo_c_scale,w_1200.jpg" alt="">
                                             </div>
                                             <div class="col-1-2">
                                                 <h3>Who are we</h3>
@@ -225,9 +225,9 @@ images/pic-about-01_mvr518_c_scale,w_1200.jpg 1200w" src="images/pic-about-01_mv
                                                     <article class="card-blog">
                                                         <div>
                                                             <img sizes="(max-width: 1200px) 100vw, 1200px" srcset="
-images/pic-article-01_l8pxig_c_scale,w_380.jpg 380w,
-images/pic-article-01_l8pxig_c_scale,w_941.jpg 941w,
-images/pic-article-01_l8pxig_c_scale,w_1200.jpg 1200w" src="images/pic-article-01_l8pxig_c_scale,w_1200.jpg" alt="">
+images/pic-article-01_jlrdbu_c_scale,w_380.jpg 380w,
+images/pic-article-01_jlrdbu_c_scale,w_941.jpg 941w,
+images/pic-article-01_jlrdbu_c_scale,w_1200.jpg" src="images/pic-article-01_jlrdbu_c_scale,w_1200.jpg" alt="">
                                                         </div>
                                                         <p class="card-category">Career</p>
                                                         <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a>
@@ -242,9 +242,9 @@ images/pic-article-01_l8pxig_c_scale,w_1200.jpg 1200w" src="images/pic-article-0
                                                     <article class="card-blog">
                                                         <div>
                                                             <img sizes="(max-width: 3000px) 40vw, 1200px" srcset="
-images/pic-article-02_jlsmzh_c_scale,w_380.jpg 380w,
-images/pic-article-02_jlsmzh_c_scale,w_857.jpg 857w,
-images/pic-article-02_jlsmzh_c_scale,w_1200.jpg 1200w" src="images/pic-article-02_jlsmzh_c_scale,w_1200.jpg" alt="">
+images/pic-article-02_wqlbes_c_scale,w_380.jpg 380w,
+images/pic-article-02_wqlbes_c_scale,w_857.jpg 857w,
+images/ pic-article-02_wqlbes_c_scale,w_1200.jpg 1200w" src="pic-article-02_wqlbes_c_scale,w_1200.jpg" alt="">
                                                         </div>
                                                         <p class="card-category">Digital Life</p>
                                                         <h3><a href="#">Ut alios omittam, hunc appello, quem ille
@@ -261,9 +261,9 @@ images/pic-article-02_jlsmzh_c_scale,w_1200.jpg 1200w" src="images/pic-article-0
                                                     <article class="card-blog">
                                                         <div>
                                                             <img sizes="(max-width: 3000px) 40vw, 1200px" srcset="
-images/pic-article-03_chycch_c_scale,w_380.jpg 380w,
-images/pic-article-03_chycch_c_scale,w_960.jpg 960w,
-images/pic-article-03_chycch_c_scale,w_1200.jpg 1200w" src="images/pic-article-03_chycch_c_scale,w_1200.jpg" alt="">
+images/pic-article-03_zohthx_c_scale,w_380.jpg 380w,
+images/pic-article-03_zohthx_c_scale,w_960.jpg 960w,
+images/pic-article-03_zohthx_c_scale,w_1200.jpg 1200w" src="images/p pic-article-03_zohthx_c_scale,w_1200.jpg" alt="">
                                                         </div>
                                                         <p class="card-category">Social</p>
                                                         <h3><a href="#">Bestiarum vero nullum iudicium puto.</a>
